--- a/booknow-2.html
+++ b/booknow-2.html
@@ -248,7 +248,7 @@
                                     <a class="nav-link" href="price.html">Team</a>
                                 </li> -->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="fff.html">Charter</a>
+                                    <a class="nav-link" href="charter.html">Charter</a>
                                 </li>
                                
                                 <!-- <li class="nav-item">
@@ -260,9 +260,8 @@
 
                             </ul>
 
-                            <div class="log-in">
-                                <a class="btn text-uppercase" href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                                    Sign In</a>
+                             <div class="log-in">
+                                <li><button class="btn "><a href="https://www.luna-catamarans.com/" target="_blank">VISIT OUR BOATYARD</a></button></li>
                             </div>
                         </div>
 
