--- a/Cont3.html
+++ b/Cont3.html
@@ -248,7 +248,7 @@
                                     <a class="nav-link" href="price.html">Team</a>
                                 </li> -->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="fff.html">Charter</a>
+                                    <a class="nav-link" href="charter.html">Charter</a>
                                 </li>
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="price.html">Management</a>
@@ -259,9 +259,8 @@
 
                             </ul>
 
-                            <div class="log-in">
-                                <a class="btn text-uppercase" href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                                    Sign In</a>
+                             <div class="log-in">
+                                <li><button class="btn "><a href="https://www.luna-catamarans.com/" target="_blank">VISIT OUR BOATYARD</a></button></li>
                             </div>
                         </div>
 
@@ -301,9 +300,9 @@
         </div>
         <div class="address">
           <h5>Email:</h5>
-          <p><span class="fa fa-envelope"></span> <a href="info@localhost">
-info@localhost</a></p>
-          <p><span class="fa fa-globe"></span> <a href="mailto:website@example.com">website@example.com</a></p>
+          <p><span class="fa fa-envelope"></span> <a href="lunacharters@luna-catamarans.com">
+lunacharters@luna-catamarans.com</a></p>
+         
         </div>
       </div>
     </div>
