--- a/price.html
+++ b/price.html
@@ -106,9 +106,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                             </ul>
 
-                            <div class="log-in">
-                                <a class="btn text-uppercase" href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                                    Sign In</a>
+                             <div class="log-in">
+                                <li><button class="btn "><a href="https://www.luna-catamarans.com/" target="_blank">VISIT OUR BOATYARD</a></button></li>
                             </div>
                         </div>
 
